fixed image not showing up on services

--- a/css/services.css
+++ b/css/services.css
@@ -588,7 +588,7 @@
     #reasons:after {
         content: '';
         position: absolute;
-        background: url("/images/image-4.jpg");
+        background: url("/images/image-17.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: right;
